--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "caniuse-lite": "^1.0.30001525",
     "framer-motion": "^10.16.2",
     "proptypes": "^1.1.0",
@@ -17,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
     "react-icons": "^4.10.1",
-    "react-router": "^6.15.0"
+    "react-redux": "^8.1.2",
+    "react-router": "^6.15.0",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
