--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
+    "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0"
   },
   "devDependencies": {
