--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.1",
     "caniuse-lite": "^1.0.30001525",
     "framer-motion": "^10.16.2",
     "primereact": "^9.6.2",
@@ -27,6 +28,7 @@
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.8.0"
   },
   "devDependencies": {
